[workspace]
resolver = "2"
members = [
    "data"
]

[workspace.dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.166", features = ["derive", "serde_derive"] }
fastrand = "2.0.0"
async-trait = "0.1.69"
dirs = "5.0.1"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "cookies", "gzip"] }
