[workspace]
resolver = "2"
members = ["data", "ext", "indicators", "app"]

[workspace.dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = { version = "0.4.26", features = ["serde"] }
serde = { version = "1.0.166", features = ["derive", "serde_derive"] }
fastrand = "2.0.0"
async-trait = "0.1.69"
dirs = "5.0.1"
tokio = { version = "1.29.1", features = ["full"] }
reqwest = { version = "0.11.18", features = ["json", "cookies", "gzip"] }
md5 = "0.7.0"
serde_json = "1.0.100"
tracing = { version = "0.1.37", features = ["log"] }
lazy_static = "1.4.0"
ta = { version = "0.5.0", features = ["serde"] }

[workspace.dependencies.iced]
version = "0.9.0"
default-features = false
features = [
    "canvas",
    "debug",
    "palette",
    "glow",
    "image",
    "image_rs",
    "tokio",
    "default_system_font",
    "smol",
    "svg",
    "system",
]

[workspace.dependencies.plotters]
version = "0.3.4"
default-features = false
features = ["all_elements", "all_series", "full_palette", "chrono", "datetime"]
