[package]
name = "data"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
fastrand.workspace = true
async-trait.workspace = true
dirs.workspace = true
tokio.workspace = true
reqwest.workspace = true
md5.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dependencies.iced]
workspace = true
optional = true

[features]
full = ["iced_color"]
iced_color = ["iced"]
