[package]
name = "trading-indicators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static.workspace = true
ta.workspace = true
trading-data = {path = "../data"}
trading-ext = {path = "../ext" }

[dev-dependencies]
tokio.workspace = true
